# claude-dev-toolkit

./: .gitignore  ANNOUNCEMENT.md  CLAUDE.md  README.md  README_CONTEXT7.md  REPO_STRUCTURE.md  SECURITY_REVIEW.md  SOCIAL_MEDIA_POSTS.md  TEST_AUTOMATION_README.md  agent-context-config.json  claude-subagents-enhanced.md  mcp-config.json  package-lock.json  package.json
.claude-plugin/: plugin.json
.claude-skills/: skill-loader.js
.claude/skills/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  (+1 more)
agents/: MIGRATION-REPORT.md  activate.sh  agent-chains.yaml  agent-health-dashboard.md  agent-registry.json  agent-selector.js  agents-summary.md  backend-specialist.md  context7-documentation.md  context_manager_agent.md  database-architect.md  devops-automation-agent.md  devops-deployment-engineer.md  documentation-agent.md  frontend-specialist.md  master-orchestrator.md  migrate-agents.sh  ml-ai-integration.md  performance-testing-agent.md  playwright-test-agent.md  qa-testing-engineer.md  security-compliance-agent.md  security-specialist.md  senior-fullstack-developer.md  solutions-architect.md  sql-universal-expert.md  test-automation-agent.md  ux-ui-designer.md
codex-config/: CODEX.md  README.md  agent-context-config.json
docs/: CONTEXT7_SETUP.md  backend.md  frontend.md  infrastructure.md  security.md  testing.md  vitest-process-management.md
scripts/: deploy-codex-agents.sh  kill-vitest.sh
toolkit/: .env.example  COMPLETION_REPORT.md  INTEGRATION_STATUS.md  Makefile.include  README.md
toolkit/defensive/: README.md  __init__.py  pyproject.toml
(+58 files in other folders)
