[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-toolkit-defensive"
version = "1.0.0"
description = "Defensive utilities for robust AI integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Claude Toolkit", email = "toolkit@example.com"}
]
keywords = ["ai", "llm", "claude", "defensive-programming", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/claude-toolkit"
"Bug Tracker" = "https://github.com/yourusername/claude-toolkit/issues"
